Use deleteLater instead of delete for WlmServer because Connection::disconnect may access it after delete was called. Don't leak NotificationServerConnection if user typed bad password (and porbably on other errors too). Use standard bad password disconnection.

BUG: 199580

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1067407